--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="header__right">
         <div class="header__image">
-          <img src="assets/jonas-farias.png" alt="Jonas Farias" class="Jonas" />
+          <img src="assets/jonas-octo.svg" alt="Jonas Farias" class="Jonas" />
           <img src="assets/abstract.svg" alt="background" class="background" />
         </div>
       </div>
