--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </ul>
       </div>
       <div class="about__right">
-        <h3 class="tertiary-title mb-m">
+        <h3 class="tertiary__title mb-m">
           Desenvolvedor fullstack apaixonado por tecnologia e soluções criativas
         </h3>
         
